added hosting places endpoints
