# src/models/hosting-model.ts
@@ -1,0 +1,8 @@
+export default interface Hosting {
+    id?: number,
+    hostType?: string,
+    description?: string, 
+    address?: string, 
+    name?: string, 
+    cnpj?: string, 
+}
